<resources>
    <string name="app_name">Notes</string>

    <string name="text_label_title">Title</string>
    <string name="text_label_description">Description</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_update_note">Update Note</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_notes">Notes</string>
    <string name="error_empty_title">Title should not be empty</string>
    <string name="error_empty_description">Description should not be empty</string>
    <string name="text_note_added">Note added successfully</string>
    <string name="text_note_updated">Note updated successfully</string>
    <string name="text_update">Update Note</string>
    <string name="text_pin">Pin Note</string>
    <string name="text_un_pin">Unpin Note</string>
    <string name="text_delete_note">Delete Note</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="text_delete">Delete</string>
    <string name="text_alert">Alert</string>
    <string name="alert_message_logout">Are you sure you want to logout</string>
    <string name="alert_message_note_delete">Are you sure you want to delete this note</string>
    <string name="text_pinned">Pinned</string>
    <string name="text_search_your_notes">Search your notes</string>
    <string name="error_empty_notes">No Notes Available</string>
    <string name="text_pinned_notes">Pinned Notes</string>
</resources>
