<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/text_pin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/text_update"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16sp" />


    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/text_delete"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:text="@android:string/cancel"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/text_size_16sp" />

</LinearLayout>