<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:padding="@dimen/dimen_20dp"
    tools:context=".ui.view.fragments.AddNotesFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_label_title">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:importantForAutofill="no"
            android:inputType="text|textNoSuggestions"
            android:maxLength="30"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/text_label_description">

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:importantForAutofill="no"
            android:inputType="text|textNoSuggestions"
            android:maxLength="300"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/text_add_note"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_17sp"
        android:textStyle="bold" />

</LinearLayout>